--- a/styles/services.css
+++ b/styles/services.css
@@ -24,7 +24,11 @@
 
 .sub-item {
     margin: 0 auto;
-    width: 80%;
+    width: 95%;
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-content: center;
 }
 
 .service-cards {
@@ -46,7 +50,14 @@
     font-size: 2rem;
 }
 
-@media (min-width: 640px) {
+p.service-description {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #ccc;
+}
+
+@media (min-width: 750px) {
     .service-cards {
         grid-template-columns: auto auto auto;
     }
